# web_13_2

./: pyproject.toml
web_10_project/: manage.py
web_10_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
web_10_project/quotes/migrations/: 0001_initial.py
web_10_project/quotes/static/quotes/: style.css
web_10_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tags.html
web_10_project/quotes/templatetags/: extract.py
web_10_project/users/: forms.py  views.py
web_10_project/users/templates/users/: password_reset_email.html
web_10_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
web_10_project/web_10_project/: asgi.py  settings.py  urls.py  wsgi.py
