[tool.poetry]
name = "web-10"
version = "0.1.0"
description = ""
authors = ["paukdv <paukdv@gmail.com>"]
readme = "README.md"
packages = [{include = "web_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pymongo = "^4.5.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
